# pacc

./: .gitignore  CMakeLists.txt
include/cli/: dispatch.h
include/cmakegen/: cmake_gen.h  cmakel_t.h
include/services/: proj.h
include/utils/: dir.h  file.h  message.h
libpacc/: CMakeLists.txt
libpacc/include/fs/: dir.h
libpacc/include/serv/: project.h
libpacc/src/fs/: dir.c
libpacc/src/serv/: project.c
src/: main.c
src/cli/: dispatch.c
src/cmakegen/: cmake_gen.c  cmakel_t.c
src/services/: proj.c
src/utils/: dir.c  file.c  message.c
